# irods_client_rest_cpp

./: .gitignore  AccessApiMainServer.cpp  AdminApiMainServer.cpp  AuthApiMainServer.cpp  CMakeLists.txt  GetConfigurationApiMainServer.cpp  LICENSE  ListApiMainServer.cpp  LogicalPathApiMainServer.cpp  MetadataApiMainServer.cpp  PutConfigurationApiMainServer.cpp  QueryApiMainServer.cpp  README.md  StreamApiMainServer.cpp  StreamGetApiMainServer.cpp  StreamPutApiMainServer.cpp  TicketApiMainServer.cpp  ZoneReportApiMainServer.cpp  irods-client-rest-cpp-reverse-proxy.conf.template  irods-rest.py  irods_client_rest_cpp.json.template  irods_consortium_continuous_integration_test_module.py  reverse-proxy.conf  swagger.yaml
.github/workflows/: linter-irods-clang-tidy.yml
api/: AccessApi.cpp  AccessApi.h  AdminApi.cpp  AdminApi.h  AuthApi.cpp  AuthApi.h  GetConfigurationApi.cpp  GetConfigurationApi.h  ListApi.cpp  ListApi.h  LogicalPathApi.cpp  LogicalPathApi.h  MetadataApi.cpp  MetadataApi.h  PutConfigurationApi.cpp  PutConfigurationApi.h  QueryApi.cpp  QueryApi.h  StreamApi.cpp  StreamApi.h  StreamGetApi.cpp  StreamGetApi.h  StreamPutApi.cpp  StreamPutApi.h  TicketApi.cpp  TicketApi.h  ZoneReportApi.cpp  ZoneReportApi.h
docker/builder/: Dockerfile  build_and_copy_packages_to_dir.sh
docker/runner/: docker-compose.yml  entrypoint.sh  irods_client_rest_cpp.Dockerfile  irods_client_rest_cpp.json
docker/tester/: docker-compose.yml  entrypoint.sh  irods_client_rest_cpp.Dockerfile  irods_client_rest_cpp.json  irods_client_rest_cpp_reverse_proxy.conf
impl/: .QueryApiImpl.cpp.swp  .QueryApiImpl.h.swp  AccessApiImpl.cpp  AccessApiImpl.h  AdminApiImpl.cpp  AdminApiImpl.h  AuthApiImpl.cpp  AuthApiImpl.h  GetConfigurationApiImpl.cpp  GetConfigurationApiImpl.h  ListApiImpl.cpp  ListApiImpl.h  LogicalPathApiImpl.cpp  LogicalPathApiImpl.h  MetadataApiImpl.cpp  MetadataApiImpl.h  PutConfigurationApiImpl.cpp  PutConfigurationApiImpl.h  QueryApiImpl.cpp  QueryApiImpl.h  StreamApiImpl.cpp  StreamApiImpl.h  StreamGetApiImpl.cpp  StreamGetApiImpl.h  StreamPutApiImpl.cpp  StreamPutApiImpl.h  TicketApiImpl.cpp  TicketApiImpl.h  ZoneReportApiImpl.cpp  ZoneReportApiImpl.h
irods_specific_implementation/: .irods_rest_query_api_implementation.h.swp  CMakeLists.txt  CMakeLists.txt.framework  configuration.cpp  configuration.hpp  constants.hpp  indexed_connection_pool_with_expiry.hpp  irods_rest_access_implementation.h  irods_rest_admin_api_implementation.h  irods_rest_api_base.h  irods_rest_auth_api_implementation.h  irods_rest_get_configuration_api_implementation.h  irods_rest_list_api_implementation.h  irods_rest_logical_path_api_implementation.h  irods_rest_metadata_api_implementation.h  irods_rest_put_configuration_api_implementation.h  irods_rest_query_api_implementation.h  irods_rest_stream_api_implementation.h  irods_rest_stream_get_api_implementation.h  irods_rest_stream_put_api_implementation.h  irods_rest_ticket_implementation.h  irods_rest_zone_report_api_implementation.h  logger.hpp  utils.hpp
jenkins_testing/: Dockerfile.centos_7.build_pkg  Dockerfile.centos_7.client_runner  Dockerfile.centos_7.copy_packages_in  Dockerfile.ubuntu_16.build_pkg  Dockerfile.ubuntu_16.client_runner  Dockerfile.ubuntu_16.copy_packages_in  Dockerfile.ubuntu_18.build_pkg  Dockerfile.ubuntu_18.client_runner  Dockerfile.ubuntu_18.copy_packages_in  PKGFILE_install_dependencies  c7_config_and_test_rest_clients.sh  configure_and_start_NGINX.sh  configure_and_start_iRODS.sh  docker-compose.yml  ub_config_and_test_rest_clients.sh
model/: ModelBase.cpp  ModelBase.h  Query_results.cpp  Query_results.h
packaging/: 00-irods-rest-cpp.conf  irods-client-rest-cpp-reverse-proxy.conf.template  irods_client_rest_cpp  irods_client_rest_cpp.conf.rsyslog  irods_client_rest_cpp.json.template  irods_client_rest_cpp.logrotate  irods_client_rest_cpp_reverse_proxy.conf.template  irods_client_rest_cpp_reverse_proxy.conf.template.in  irods_rest.py  postinst  test_irods_client_rest_cpp.py
query/: CMakeLists.txt
query/impl/: QueryApiImpl.cpp  QueryApiImpl.h
query/model/: ModelBase.h  Query_results.cpp  Query_results.h
